# KilaLive

./: KilaLive.sln  README.md
3rds/curl_new/lib/: libcurl-d.ilk  libcurl-d_imp.exp  libcurl-d_imp.lib  libcurl_imp.exp  libcurl_imp.lib
3rds/lib/: EVCode.lib
3rds/openssl/lib/: libeay32.lib
3rds/zlibwapi/lib/: zlibwapi.exp  zlibwapi.lib  zlibwapi.map
EVCode/: EVCode.vcxproj  EVCode.vcxproj.filters  bitstream.h  config.h  mask.h  mmask.h  qrenc.c  qrencode.h  qrencode_inner.h  qrinput.h  qrspec.h
HttpRequest/: HttpRequest.cpp  HttpRequest.h  HttpRequest.vcxproj  HttpRequest.vcxproj.filters  cpp.hint  dllmain.cpp
KilaHtmlProcess/: AnchorCenterWidget.cpp  AnchorCenterWidget.h  AnchorCenterWidget.ui  BaseLog.cpp  BaseLog.h  CommonTitelBar.cpp  CommonTitelBar.h  CommonWidget.cpp  CommonWidget.h  CommunicatH5.cpp  CommunicatH5.h  HtmlProcess.cpp  HtmlProcess.h  KilaHtmlProcess.qrc  KilaHtmlProcess.vcxproj  KilaHtmlProcess.vcxproj.filters  LogOutput.cpp  LogOutput.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  RWebPanelTitlebar.cpp  RWebPanelTitlebar.h  RWebPanelTitlebar.ui  TWebEngineUrlRequestInterceptor.cpp  TWebEngineUrlRequestInterceptor.h  kilamain_ja.ts  kilamain_zh.ts  main.cpp
KilaHtmlProcess/resource/css/: loginWidget.css
KilaHtmlProcess/resource/skin/: ubuntuSkin.qss
KilaHtmlProcess/resource/translator/: kilamain_ja.qm  kilamain_zh.qm
KilaLog/: KilaLog.cpp  KilaLog.h  KilaLog.vcxproj  KilaLog.vcxproj.filters  UxLogConfig.h
KilaLog/log4cpp/src/: AbortAppender.cpp  Appender.cpp  AppenderSkeleton.cpp  AppendersFactory.cpp  BasicConfigurator.cpp  (+44 more)
KilaMain/: KilaMain.cpp  KilaMain.h  KilaMain.qrc  KilaMain.ui  KilaMain.vcxproj  KilaMain.vcxproj.filters  main.cpp
KilaUtils/: KilaUtils.h  KilaUtils.vcxproj  KilaUtils.vcxproj.filters  RegistryUtil.cpp  RegistryUtil.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h  ZipUtil.cpp  ZipUtil.h
juce/: BREAKING-CHANGES.txt  ChangeList.txt  juce.vcxproj  juce.vcxproj.filters
juce/modules/: JuceConfig.h  JuceHeader.h
juce/unittest/: Main.cpp  interprocess_sample.cpp  juce_unittest.sln  juce_unittest.vcxproj
juce/wrapper/: CMakeLists.txt  dllmain.cpp  include_juce_audio_basics.cpp  include_juce_audio_devices.cpp  include_juce_audio_formats.cpp  include_juce_audio_processors.cpp  include_juce_audio_utils.cpp  include_juce_core.cpp  include_juce_cryptography.cpp  include_juce_data_structures.cpp  include_juce_events.cpp  include_juce_graphics.cpp  include_juce_gui_basics.cpp  include_juce_gui_extra.cpp  include_juce_opengl.cpp  include_juce_video.cpp
(+1341 files in other folders)
